# fm2-agency

./: .gitignore  0-runmodel.bat  1-run.bat  LICENSE  Modelfile  PUBLISH.md  README.md  pyproject.toml  requirements.txt
dashboard/: index.html
docs/: linkedin-post-draft.md
scripts/: setup-models.sh
src/fm2_agency/: __init__.py  crew.py  events.py  llms.py  run_cli.py  server.py
