[project]
name = "fm2-agency"
version = "0.1.0"
description = "A local-first multi-agent crew (CrewAI + Ollama) with a live operations dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Juliano Souza" }]
keywords = ["crewai", "ollama", "multi-agent", "local-llm", "self-hosted", "agents"]

dependencies = [
    "crewai>=0.80",
    "crewai-tools",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
fm2-run = "fm2_agency.run_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
